--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
     "dotnet.defaultSolution": "SlackGameJam.sln",
     "cSpell.words": [
         "destr",
+        "Hackongus",
         "Mult",
         "stam"
     ]
