--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 [*.cs]
 csharp_new_line_before_open_brace = none
-csharp_new_line_before_else = true
+csharp_new_line_before_else = false
 csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
 csharp_new_line_before_members_in_object_initializers = true
