Fixes after refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "cSpell.words": [
         "destr",
         "Equipable",
+        "Gungeon",
         "hackgeon",
         "Hackongus",
         "Interactable",
