Small readme fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "Interactable",
         "Mult",
         "Pushable",
+        "roguelike",
         "Stackable",
         "stam",
         "Tilemap"
